# datatreatment-pylite

./: .env  .gitignore  Readme.md  config.py  database.py  extra_packages.py  main.py  pyproject.toml  requeriments.txt  server.py
app/bat/: path_file.bat  startCassandra.bat
app/logs/: logsManager.py
app/scripts/: checkerManager.py  csvManager.py  debugCSV.py  postProcessing.py
docs/json/: estacion.json  muetsra.json
public/connections/: mongo_connection.py  run_frontend_react.py
public/docs/contexts/: estructuras-cassandra.md  estructuras-cassandra.txt  funcionalidad.md  logica-colecciones.md  logica-colecciones.txt
public/docs/json/: estacion.json  muestra.json
src/: config.py  connection.py  database.py  server.py
src/app/dbOperations/: insert.py  table.py
src/app/dbOperations/cassandra/: drop.py  keyspace.py  select.py  update.py
src/app/exe/linux/: menuDebug.sh  pathFile.sh  path_file.sh  startCassandra.sh
src/app/exe/windows/: menuDebug.bat  path_file.bat  startCassandra.bat
src/app/scripts/: csvManager.py  debugCSV.py
src/database/apache-cassandra-local/javadoc/org/apache/cassandra/db/context/: CounterContext.Relationship.html
src/models/: collectionesGroup.py  collectionsStructure.py  platformsSys.py
utils/: requeriments-linux.txt
